--- a/angular.json
+++ b/angular.json
@@ -48,7 +48,12 @@
 						"polyfills": "src/polyfills.ts",
 						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
-						"assets": ["src/favicon.ico", "src/assets", "src/assets/json"],
+						"assets": [
+							"src/favicon.ico",
+							{ "glob": "**/*", "input": "src/assets/img", "output": "assets/img" },
+							{ "glob": "**/*", "input": "src/assets/json", "output": "assets/json" },
+							{ "glob": "**/*", "input": "src/assets/fonts", "output": "assets/fonts" }
+						],
 						"styles": ["src/styles.scss"],
 						"scripts": []
 					},
@@ -96,25 +101,6 @@
 						}
 					},
 					"defaultConfiguration": "development"
-				},
-				"extract-i18n": {
-					"builder": "@angular-devkit/build-angular:extract-i18n",
-					"options": {
-						"browserTarget": "portfolio:build"
-					}
-				},
-				"test": {
-					"builder": "@angular-devkit/build-angular:karma",
-					"options": {
-						"main": "src/test.ts",
-						"polyfills": "src/polyfills.ts",
-						"tsConfig": "tsconfig.spec.json",
-						"karmaConfig": "karma.conf.js",
-						"inlineStyleLanguage": "scss",
-						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": ["src/styles.scss"],
-						"scripts": []
-					}
 				}
 			}
 		}
