--- a/src/assets/json/projects.json
+++ b/src/assets/json/projects.json
@@ -8,7 +8,7 @@
 			"projectSubDesc": "For PLTW Engineering Design and Development",
 			"projectLanguage": ["C++"],
 			"projectLibraries": ["Arduino", "Stepper Motor HAL"],
-			"projectAsset": "/assets/armanipulator.png",
+			"projectAsset": "armanipulator.png",
 			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/Armanipulator" }],
 			"projectStatus": { "status": "Archived", "reason": "(No Longer in Active Development)" }
 		},
@@ -19,7 +19,7 @@
 			"projectSubDesc": "For Rose-Hulman CSSE232: Computer Architecture",
 			"projectLanguage": ["C#"],
 			"projectLibraries": [".NET Core 3.1"],
-			"projectAsset": "/assets/cnhasm-noarch.png",
+			"projectAsset": "cnhasm-noarch.png",
 			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/cnhasm-noarch" }],
 			"projectStatus": { "status": "Finished" }
 		},
@@ -30,14 +30,14 @@
 			"projectSubDesc": "For Rose-Hulman CSSE280",
 			"projectLanguage": ["HTML5", "Sass", "TypeScript"],
 			"projectLibraries": ["Angular", "Firebase (via @angular/fire)", "Bootstrap"],
-			"projectAsset": "/assets/Picture1.png",
+			"projectAsset": "Picture1.png",
 			"projectLinks": [
 				{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/UberUnit" },
 				{ "linkType": "demo", "linkURL": "https://uberunit-7c04b.web.app/" },
 				{
 					"linkType": "misc",
 					"linkURL": "https://rosehulmanprojectvault.org/project/-Mcae1Wvtehq-J4saaLz",
-					"linkDesc": "Rose-Hulman Project Vault"
+					"linkDesc": "ROSE-HULMAN PROJECT VAULT"
 				}
 			],
 			"projectStatus": { "status": "Finished" }
@@ -58,7 +58,7 @@
 			"projectSubDesc": "For Rose-Hulman CSSE220: Introduction to Object Oriented Programming",
 			"projectLanguage": ["Java 8"],
 			"projectLibraries": ["Java FX Graphics"],
-			"projectAsset": "/assets/joust.png",
+			"projectAsset": "joust.png",
 			"projectLinks": [{ "linkType": "text", "text": "Private Repo (Academic Integrity)" }],
 			"projectStatus": { "status": "Finished (Private Work)" }
 		},
@@ -69,7 +69,7 @@
 			"projectSubDesc": "Originally for Rose-Hulman CSSE280, Further Worked On Personally",
 			"projectLanguage": ["HTML5", "Sass", "TypeScript"],
 			"projectLibraries": ["Angular 12, Angular Material, NerdFonts"],
-			"projectAsset": "/assets/portfolio.png",
+			"projectAsset": "portfolio.png",
 			"projectLinks": [
 				{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/rhit-westeraj.github.io" }
 			],
@@ -112,7 +112,7 @@
 			"projectSubDesc": "For Rose-Hulman ECE160 - Engineering Practice",
 			"projectLanguage": ["C", "C++"],
 			"projectLibraries": ["Arduino", "Stepper Motor HAL", "PS2 Controller HAL"],
-			"projectAsset": "/assets/IMG_3188.JPG",
+			"projectAsset": "IMG_3188.JPG",
 			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/Thunderbirds-ECE160/Final-Robot" }],
 			"projectStatus": { "status": "Finished" }
 		},
@@ -123,7 +123,7 @@
 			"projectSubDesc": "For Rose-Hulman ECE230 - Embedded Systems",
 			"projectLanguage": ["C"],
 			"projectLibraries": ["TI-RTOS (For MSP432)", "TI MSP432/CC2650 Bluetooth Stack"],
-			"projectAsset": "/assets/IMG_8955.JPG",
+			"projectAsset": "IMG_8955.JPG",
 			"projectLinks": [
 				{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/scavlanders-gamepad" }
 			],
