--- a/package.json
+++ b/package.json
@@ -10,18 +10,17 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "~12.2.0",
-		"@angular/cdk": "^12.2.7",
-		"@angular/common": "~12.2.0",
-		"@angular/compiler": "~12.2.0",
-		"@angular/core": "~12.2.0",
-		"@angular/forms": "~12.2.0",
-		"@angular/material": "^12.2.7",
-		"@angular/platform-browser": "~12.2.0",
-		"@angular/platform-browser-dynamic": "~12.2.0",
-		"@angular/router": "~12.2.0",
-		"ajv": "^6.9.1",
-		"bootswatch": "^5.1.1",
+		"@angular/animations": "^12.2.8",
+		"@angular/cdk": "^12.2.8",
+		"@angular/common": "^12.2.8",
+		"@angular/compiler": "^12.2.8",
+		"@angular/core": "^12.2.8",
+		"@angular/forms": "^12.2.8",
+		"@angular/material": "^12.2.8",
+		"@angular/platform-browser": "^12.2.8",
+		"@angular/platform-browser-dynamic": "^12.2.8",
+		"@angular/router": "^12.2.8",
+		"ajv": "^6.12.6",
 		"rxjs": "~6.6.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.11.4"
@@ -29,8 +28,8 @@
 	"devDependencies": {
 		"@angular-devkit/build-angular": "~12.2.7",
 		"@angular/cli": "~12.2.7",
-		"@angular/compiler-cli": "~12.2.0",
-		"@types/node": "^12.11.1",
+		"@angular/compiler-cli": "^12.2.8",
+		"@types/node": "^12.20.27",
 		"typescript": "~4.3.5"
 	}
 }
