GPG Key Is Now Accessible :)
-Added GPG Key button to main sidebar
-The GPG Key button will copy to clipboard and display a snackbar on copy
-Added tooltips to social links buttons
-Added 404 Page Title
-Added GPG Key .asc asset (currently unused)
-Added Clipboard, Snack Bar, and Tooltip Modules
-Added Additional Asset Deploy Rules
-Created JSON for GPG Key Distribution

--- a/angular.json
+++ b/angular.json
@@ -52,7 +52,8 @@
 							"src/favicon.ico",
 							{ "glob": "**/*", "input": "src/assets/img", "output": "assets/img" },
 							{ "glob": "**/*", "input": "src/assets/json", "output": "assets/json" },
-							{ "glob": "**/*", "input": "src/assets/fonts", "output": "assets/fonts" }
+							{ "glob": "**/*", "input": "src/assets/fonts", "output": "assets/fonts" },
+							{ "glob": "**/*", "input": "src/assets/misc", "output": "assets/misc" }
 						],
 						"styles": ["src/styles.scss"],
 						"scripts": []
