--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-	"name": "portfolio",
-	"version": "0.0.0",
-	"scripts": {
-		"ng": "ng",
-		"start": "ng serve",
-		"build": "ng build",
-		"build-prod": "ng build --configuration production",
-		"watch": "ng build --watch --configuration development"
-	},
-	"private": true,
-	"dependencies": {
-		"@angular/animations": "^12.2.11",
-		"@angular/cdk": "^12.2.11",
-		"@angular/common": "^12.2.11",
-		"@angular/compiler": "^12.2.11",
-		"@angular/core": "^12.2.11",
-		"@angular/forms": "^12.2.11",
-		"@angular/material": "^12.2.11",
-		"@angular/platform-browser": "^12.2.11",
-		"@angular/platform-browser-dynamic": "^12.2.11",
-		"@angular/router": "^12.2.11",
-		"ajv": "^6.12.6",
-		"rxjs": "~6.6.0",
-		"tslib": "^2.3.0",
-		"zone.js": "~0.11.4"
-	},
-	"devDependencies": {
-		"@angular-devkit/build-angular": "^12.2.11",
-		"@angular/cli": "^12.2.11",
-		"@angular/compiler-cli": "^12.2.11",
-		"@types/node": "^12.20.35",
-		"typescript": "~4.3.5"
-	}
+  "name": "portfolio",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "build-prod": "ng build --configuration production",
+    "watch": "ng build --watch --configuration development"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^13.0.0",
+    "@angular/common": "^13.0.0",
+    "@angular/compiler": "^13.0.0",
+    "@angular/core": "^13.0.0",
+    "@angular/forms": "^13.0.0",
+    "@angular/material": "^13.0.0",
+    "@angular/platform-browser": "^13.0.0",
+    "@angular/platform-browser-dynamic": "^13.0.0",
+    "@angular/router": "^13.0.0",
+    "rxjs": "7.4",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^13.0.1",
+    "@angular/cli": "^13.0.1",
+    "@angular/compiler-cli": "^13.0.0",
+    "@types/node": "^12.20.35",
+    "typescript": "~4.4.4"
+  }
 }
