--- a/package.json
+++ b/package.json
@@ -1,36 +1,34 @@
 {
-	"name": "portfolio",
-	"version": "0.0.0",
-	"scripts": {
-		"ng": "ng",
-		"start": "ng serve",
-		"build": "ng build",
-		"build-prod": "ng build --configuration production",
-		"watch": "ng build --watch --configuration development"
-	},
-	"private": true,
-	"dependencies": {
-		"@angular/animations": "~12.2.0",
-		"@angular/cdk": "^12.2.7",
-		"@angular/common": "~12.2.0",
-		"@angular/compiler": "~12.2.0",
-		"@angular/core": "~12.2.0",
-		"@angular/forms": "~12.2.0",
-		"@angular/material": "^12.2.7",
-		"@angular/platform-browser": "~12.2.0",
-		"@angular/platform-browser-dynamic": "~12.2.0",
-		"@angular/router": "~12.2.0",
-		"ajv": "^6.9.1",
-		"bootswatch": "^5.1.1",
-		"rxjs": "~6.6.0",
-		"tslib": "^2.3.0",
-		"zone.js": "~0.11.4"
-	},
-	"devDependencies": {
-		"@angular-devkit/build-angular": "~12.2.7",
-		"@angular/cli": "~12.2.7",
-		"@angular/compiler-cli": "~12.2.0",
-		"@types/node": "^12.11.1",
-		"typescript": "~4.3.5"
-	}
+  "name": "portfolio",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "build-prod": "ng build --configuration production",
+    "watch": "ng build --watch --configuration development"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~13.2.5",
+    "@angular/cdk": "^13.2.5",
+    "@angular/common": "~13.2.5",
+    "@angular/compiler": "~13.2.5",
+    "@angular/core": "~13.2.5",
+    "@angular/forms": "~13.2.5",
+    "@angular/material": "^13.2.5",
+    "@angular/platform-browser": "~13.2.5",
+    "@angular/platform-browser-dynamic": "~13.2.5",
+    "@angular/router": "~13.2.5",
+    "rxjs": "^7.5.4",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~13.2.5",
+    "@angular/cli": "~13.2.5",
+    "@angular/compiler-cli": "~13.2.5",
+    "@types/node": "^16.11.26",
+    "typescript": "~4.5.5"
+  }
 }
