Telling dependabot to be quiet

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,16 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
+    reviewers:
+      - "rhit-westeraj"
+    ignore:
+      - dependency-name: "@angular/cli"
+        update-types: ["version-update:semver-patch"]
+      - dependency-name: "@angular/compiler-cli"
+        update-types: ["version-update:semver-patch"]
+      - dependency-name: "@angular/router"
+        update-types: ["version-update:semver-patch"]
+      - dependency-name: "@angular/forms"
+        update-types: ["version-update:semver-patch"]
+      - dependency-name: "@angular/platform-browser-dynamic"
+        update-types: ["version-update:semver-patch"]
