--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
 		"@types/react-dom": "^18.0.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
-		"typescript": "^4.7.4",
-		"web-vitals": "^2.1.4"
+		"typescript": "^4.7.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -56,3 +56,4 @@
 		"webpack": "^5.74.0"
 	}
 }
+
