--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.10.0",
 		"@emotion/styled": "^11.10.0",
+		"@mui/icons-material": "^5.8.4",
 		"@mui/material": "^5.10.1",
 		"@types/node": "^16.11.53",
 		"@types/react": "^18.0.17",
@@ -18,21 +19,6 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app"
-		],
-		"overrides": [
-			{
-				"files": [
-					"**/*.stories.*"
-				],
-				"rules": {
-					"import/no-anonymous-default-export": "off"
-				}
-			}
-		]
 	},
 	"browserslist": {
 		"production": [
@@ -51,9 +37,14 @@
 		"@typescript-eslint/parser": "^5.34.0",
 		"babel-plugin-named-exports-order": "^0.0.2",
 		"eslint": "^8.22.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-react": "^7.30.1",
 		"prop-types": "^15.8.1",
 		"webpack": "^5.74.0"
+	},
+	"prettier": {
+		"jsx-single-quote": true,
+		"singleQuote": true
 	}
 }
 
