--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@types/react-dom": "^18.0.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-material-ui-carousel": "^3.4.2",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
 		"typescript": "^4.7.4"
@@ -47,4 +48,3 @@
 		"singleQuote": true
 	}
 }
-
