--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v2
 
@@ -19,8 +19,8 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }}
         git_user_signingkey: true
         git_commit_gpgsign: true
-    
-    
+
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
@@ -37,26 +37,20 @@ jobs:
 
     - name: Load Project Dependencies
       run: npm install
-    
-    - name: Run Test Build
+
+    - name: Run Build
       run: npm run build
-      
-    - name: Clean build output
-      run: rm -r dist
-      
-    - name: Run Production Build
-      run: npm run build-prod
-      
+
     - name: Some SPA Workarounds for Github Pages
       run : |
-        touch dist/portfolio/.nojekyll
-        cp dist/portfolio/index.html dist/portfolio/404.html
+        touch build/.nojekyll
+        cp build/index.html build/404.html
 
-    - name: Deploy     
+    - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.5
       with:
         branch: live
-        folder: dist/portfolio
+        folder: build
         git-config-name: ${{  'Alex Westerman'  }}
         git-config-email: ${{  'westeraj@rose-hulman.edu'  }}
-        
+
