--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,4 +12,5 @@ updates:
     reviewers:
       - "rhit-westeraj"
     ignore:
+      - dependency-name: "*"
       - update-types: ["version-update:semver-patch"]
