--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,4 +13,4 @@ updates:
       - "rhit-westeraj"
     ignore:
       - dependency-name: "*"
-      - update-types: ["version-update:semver-patch"]
+        update-types: ["version-update:semver-patch"]
