--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,54 +3,56 @@ name: Deploy to Live Branch
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    if: github.event_name == 'pull_request'
     steps:
-    - uses: actions/checkout@v2
-
-
-    - name: Import GPG key
-      uses: crazy-max/ghaction-import-gpg@v4
+    - uses: actions/checkout@v3
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v2
       with:
-        gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
-        passphrase: ${{ secrets.PASSPHRASE }}
-        git_user_signingkey: true
-        git_commit_gpgsign: true
-
-
-    - name: Use Node.js 16
-      uses: actions/setup-node@v1
+        version: 7
+    - name: Use Node.js
+      uses: actions/setup-node@v3
       with:
-        node-version: 16.x
-
-    - name: Restore NPM Cache
-      uses: actions/cache@v2
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-
-
+        node-version: 16
+        cache: pnpm
+        cache-dependency-path: ./pnpm-lock.yaml
     - name: Load Project Dependencies
-      run: npm install
-
+      run: pnpm install
     - name: Run Build
-      run: npm run build
+      run: pnpm run build
 
+  release:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push' && github.event_name != 'pull_request'
+    steps:
+    - uses: actions/checkout@v3
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v2
+      with:
+        version: 7
+    - name: Use Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 16
+        cache: pnpm
+        cache-dependency-path: RetireSimple.Frontend/pnpm-lock.yaml
+    - name: Load Project Dependencies
+      run: pnpm install
+    - name: Run Build
+      run: pnpm run build
     - name: Some SPA Workarounds for Github Pages
       run : |
         touch build/.nojekyll
         cp build/index.html build/404.html
-
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.5
       with:
         branch: live
         folder: build
-        git-config-name: ${{  'Alex Westerman'  }}
-        git-config-email: ${{  'westeraj@rose-hulman.edu'  }}
 
