--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
 		"pnpm": "7"
 	},
 	"dependencies": {
-		"@emotion/react": "^11.10.0",
-		"@emotion/styled": "^11.10.0",
-		"@mui/icons-material": "^5.10.2",
-		"@mui/material": "^5.10.2",
-		"@types/node": "^16.11.53",
-		"@types/react": "^18.0.17",
-		"@types/react-dom": "^18.0.6",
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
+		"@mui/icons-material": "^5.11.9",
+		"@mui/material": "^5.11.9",
+		"@types/node": "^18.13.0",
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-material-ui-carousel": "^3.4.2",
-		"react-router-dom": "^6.4.0",
+		"react-router-dom": "^6.8.1",
 		"react-scripts": "5.0.1",
-		"typescript": "^4.9.3"
+		"typescript": "^4.9.5"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -37,20 +37,36 @@
 		]
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^5.34.0",
-		"@typescript-eslint/parser": "^5.34.0",
+		"@babel/core": "^7.20.12",
+		"@babel/plugin-syntax-flow": "^7.18.6",
+		"@babel/plugin-transform-react-jsx": "^7.20.13",
 		"babel-plugin-named-exports-order": "^0.0.2",
-		"@babel/core": "^7.16.0",
-		"@babel/plugin-syntax-flow": "^7.14.5",
-		"@babel/plugin-transform-react-jsx": "^7.14.9",
-		"eslint": "^8.22.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-react": "^7.30.1",
+		"eslint": "^8.34.0",
+		"eslint-plugin-react": "^7.32.2",
 		"prop-types": "^15.8.1",
 		"webpack": "^5.75.0"
 	},
-	"prettier": {
-		"jsx-single-quote": true,
-		"singleQuote": true
+	"eslintConfig": {
+		"env": {
+			"browser": true,
+			"es2021": true
+		},
+		"extends": [
+			"eslint:recommended",
+			"react-app"
+		],
+		"parserOptions": {
+			"ecmaVersion": "latest",
+			"sourceType": "module"
+		},
+		"plugins": [
+			"react"
+		],
+		"rules": {},
+		"settings": {
+			"react": {
+				"version": "detect"
+			}
+		}
 	}
 }
