--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
 	"dependencies": {
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
-		"@mui/icons-material": "^5.11.9",
 		"@mui/material": "^5.11.9",
 		"@types/node": "^18.13.0",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^4.7.1",
 		"react-material-ui-carousel": "^3.4.2",
 		"react-router-dom": "^6.8.1",
 		"react-scripts": "5.0.1",
