--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		},
 		"extends": [
 			"eslint:recommended",
+			"plugin:react/recommended",
 			"react-app"
 		],
 		"parserOptions": {
@@ -62,7 +63,20 @@
 		"plugins": [
 			"react"
 		],
-		"rules": {},
+		"rules": {
+			"max-len": ["warn", { "code": 120 }],
+			"quotes": ["error", "single"],
+			"comma-dangle": ["error", "always-multiline"],
+			"brace-style": ["error", "stroustrup"],
+			"no-unused-vars": ["warn"],
+			"no-console": ["warn"],
+			"no-undef": ["warn"],
+			"no-constant-condition": ["warn"],
+
+			"comma-style": ["error", "last"],
+			"jsx-quotes": ["error", "prefer-single"]
+		},
+
 		"settings": {
 			"react": {
 				"version": "detect"
