--- a/package.json
+++ b/package.json
@@ -72,7 +72,14 @@
 			"no-console": ["warn"],
 			"no-undef": ["warn"],
 			"no-constant-condition": ["warn"],
-
+			"indent": ["error", "tab"],
+			"prefer-spread": ["error"],
+			"no-trailing-spaces": ["error"],
+			"no-multiple-empty-lines": ["error", { "max": 1 }],
+			"no-multi-spaces": ["error"],
+			"no-mixed-spaces-and-tabs": ["error"],
+			"semi-style": ["error", "last"],
+			"semi": ["error", "always"],
 			"comma-style": ["error", "last"],
 			"jsx-quotes": ["error", "prefer-single"]
 		},
