--- a/package.json
+++ b/package.json
@@ -1,30 +1,42 @@
 {
-  "name": "portfolio-updated",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@mui/material": "^5.11.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
-    "react-material-ui-carousel": "^3.4.2",
-    "react-router-dom": "^6.8.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@types/node": "^18.14.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "^8.34.0",
-    "eslint-plugin-react": "^7.32.2",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
-  }
+	"name": "portfolio-updated",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.10.6",
+		"@emotion/styled": "^11.10.6",
+		"@mui/material": "^5.11.9",
+		"mui-image": "^1.0.7",
+		"prop-types": "^15.8.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.7.1",
+		"react-material-ui-carousel": "^3.4.2",
+		"react-router-dom": "^6.8.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.12",
+		"@eslint/create-config": "^0.4.2",
+		"@types/mui-image": "^1.0.1",
+		"@types/node": "^18.14.0",
+		"@types/react": "^18.0.27",
+		"@types/react-dom": "^18.0.10",
+		"@typescript-eslint/eslint-plugin": "^5.0.0",
+		"@typescript-eslint/parser": "^5.52.0",
+		"@vitejs/plugin-react": "^3.1.0",
+		"eslint": "^8.34.0",
+		"eslint-config-standard-with-typescript": "^34.0.0",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-n": "^15.0.0",
+		"eslint-plugin-promise": "^6.0.0",
+		"eslint-plugin-react": "^7.32.2",
+		"typescript": "^4.9.5",
+		"vite": "^4.1.0"
+	}
 }
