--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
 	},
 	"extends": [
 		"eslint:recommended",
-		"plugin:react/recommended"
+		"plugin:react/recommended",
+		"plugin:prettier/recommended"
 	],
 	"parserOptions": {
 		"ecmaVersion": "latest",
@@ -15,24 +16,11 @@
 		"react"
 	],
 	"rules": {
-		"max-len": ["warn", {"code": 120}],
-		"quotes": ["error", "single"],
-		"comma-dangle": ["error", "always-multiline"],
-		"brace-style": ["error","1tbs"],
 		"no-unused-vars": ["warn"],
 		"no-console": ["warn"],
 		"no-undef": ["warn"],
 		"no-constant-condition": ["warn"],
-		"indent": ["error","tab"],
-		"prefer-spread": ["error"],
-		"no-trailing-spaces": ["error"],
-		"no-multiple-empty-lines": ["error",{"max": 1}],
-		"no-multi-spaces": ["error"],
-		"no-mixed-spaces-and-tabs": ["error"],
-		"semi-style": ["error","last"],
-		"semi": ["error","always"],
-		"comma-style": ["error","last"],
-		"jsx-quotes": ["error","prefer-single"]
+		"prefer-spread": ["error"]
 	},
 	"settings": {
 		"react": {
