--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Live Branch
+name: CI
 
 on:
   push:
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    name: PR Build
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
     steps:
@@ -28,6 +29,7 @@ jobs:
       run: pnpm run build
 
   release:
+    name: Deploy
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push' && github.event_name != 'pull_request'
     steps:
