--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,20 +6,22 @@
 	"extends": [
 		"eslint:recommended",
 		"plugin:react/recommended",
-		"plugin:@typescript-eslint/recommended",
-		"prettier"
+		"plugin:prettier/recommended"
 	],
-	"overrides": [],
-	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
 	"plugins": [
-		"react",
-		"@typescript-eslint"
+		"react"
 	],
-	"rules": {},
+	"rules": {
+		"no-unused-vars": ["warn"],
+		"no-console": ["warn"],
+		"no-undef": ["warn"],
+		"no-constant-condition": ["warn"],
+		"prefer-spread": ["error"]
+	},
 	"settings": {
 		"react": {
 			"version": "detect"
