--- a/package.json
+++ b/package.json
@@ -1,56 +1,44 @@
 {
-	"name": "portfolio-website",
-	"version": "0.1.0",
+	"name": "portfolio-updated",
 	"private": true,
-	"engines": {
-		"pnpm": "7"
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@emotion/react": "^11.10.0",
-		"@emotion/styled": "^11.10.0",
-		"@mui/icons-material": "^5.10.2",
-		"@mui/material": "^5.10.2",
-		"@types/node": "^16.11.53",
-		"@types/react": "^18.0.17",
-		"@types/react-dom": "^18.0.6",
+		"@emotion/react": "^11.10.6",
+		"@emotion/styled": "^11.10.6",
+		"@mui/material": "^5.11.9",
+		"mui-image": "^1.0.7",
+		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^4.7.1",
 		"react-material-ui-carousel": "^3.4.2",
-		"react-router-dom": "^6.4.0",
-		"react-scripts": "5.0.1",
-		"typescript": "^4.9.3"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+		"react-router-dom": "^6.8.1"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^5.34.0",
-		"@typescript-eslint/parser": "^5.34.0",
-		"babel-plugin-named-exports-order": "^0.0.2",
-		"@babel/core": "^7.16.0",
-		"@babel/plugin-syntax-flow": "^7.14.5",
-		"@babel/plugin-transform-react-jsx": "^7.14.9",
-		"eslint": "^8.22.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-react": "^7.30.1",
-		"prop-types": "^15.8.1",
-		"webpack": "^5.75.0"
-	},
-	"prettier": {
-		"jsx-single-quote": true,
-		"singleQuote": true
+		"@babel/core": "^7.20.12",
+		"@eslint/create-config": "^0.4.2",
+		"@types/mui-image": "^1.0.1",
+		"@types/node": "^18.14.0",
+		"@types/react": "^18.0.27",
+		"@types/react-dom": "^18.0.10",
+		"@typescript-eslint/eslint-plugin": "^5.0.0",
+		"@typescript-eslint/parser": "^5.52.0",
+		"@vitejs/plugin-react": "^3.1.0",
+		"eslint": "^8.34.0",
+		"eslint-config-standard-with-typescript": "^34.0.0",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-n": "^15.0.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-promise": "^6.0.0",
+		"eslint-plugin-react": "^7.32.2",
+		"prettier": "^2.8.4",
+		"typescript": "^4.9.5",
+		"vite": "^4.1.0"
 	}
 }
