--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,10 +47,11 @@ jobs:
     - name: Load Project Dependencies
       run: pnpm install
     - name: Run Build
-      run: pnpm run build
+      run: pnpm build
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.5
       with:
         branch: live
-        folder: build
+        folder: dist
+        clean: true
 
