--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
 		"@mui/material": "^5.11.9",
+		"framer-motion": "^10.0.0",
 		"mui-image": "^1.0.7",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
