--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,8 +64,7 @@ jobs:
       - uses: actions/upload-pages-artifact@v1.0.7
         with: 
           path: dist
-        
-        
+      
   github-pages:
     name: GitHub Pages
     runs-on: ubuntu-latest
@@ -78,6 +77,6 @@ jobs:
     needs: [release]
     steps:
       - uses: actions/deploy-pages@v1.2.4
-      - id: gh-deploy
+        id: gh-deploy
       
         
