--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.7.1",
 		"react-material-ui-carousel": "^3.4.2",
-		"react-router-dom": "^6.8.1"
+		"react-router-dom": "^6.8.1",
+		"typewriter-effect": "^2.19.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.12",
